Updates to the css to fix carousel image issue, text overflow on the featured blog posts and centered the navigation text for mobile.

--- a/assets/css/app/custom.scss
+++ b/assets/css/app/custom.scss
@@ -438,3 +438,16 @@ ul#tab-row {
     border: 1px solid #000000;
     color:white;
 }
+// Align the navigation text to the center
+
+@media(max-width: $screen-sm-min - 1){
+    a.dropdown-item {
+        text-align: center;
+    }
+    li.main.dropdown.menu {
+        text-align: center;
+    }
+    li.main {
+        text-align: center;
+    }
+}
