--- a/assets/css/app/home-style.scss
+++ b/assets/css/app/home-style.scss
@@ -13,6 +13,18 @@
     top: 50px;
     position: relative;
 }
+.col-sm-4.featured-product::after {
+    content  : "";
+    position: absolute;
+    z-index  : 4;
+    bottom: -30px;
+    left     : 0;
+    pointer-events   : none;
+    background-image : linear-gradient(to bottom, rgba(255,255,255, 0), rgba(255,255,255, 1) 90%);
+    width    : 100%;
+    height: 3em;
+    
+}
 #content-container #latest-blogs p {
     font-size: 10px;
 }
@@ -240,8 +252,22 @@ h2#featured-boards {
     padding-left: 20px;
     padding-right: 20px;
     padding-top: 10px;
+    overflow: hidden;
     border-top: 1px solid #eee;
 }
+.row.title::after {
+    content  : "";
+    position: relative;
+    z-index  : 1;
+    bottom: 100px;
+    left     : 0;
+    pointer-events   : none;
+    background-image : linear-gradient(to bottom, 
+                      rgba(255,255,255, 0), 
+                      rgba(255,255,255, 1) 90%);
+    width    : 100%;
+    height: 6em;
+  }
 
 h3.blog-featured-title {
     font-size: 14px;
